        its argument, unchanged not wrapped). SO: put this pseudo-setting in a settings file or dict,
        use those settings everywhere, and you can disable all decoration with one switch.
        This is a "pseudo"-setting because there's no such entry in `log_calls_settings`:
            if it (has been) true then there are no log_calls_settings attributes!, and conversely.

TODO Fix NO_DECO: It should UNdecorate already deco'd functions, methods in classes and inner classes etc... RIGHT?
todo This SHOULD also entail REMOVING attributes on deco'd functions classes methods -- investigate


      - record_history can (now) use log_message and log_exprs
        Output is always via print.

      - Little fix: if f is disabled, log_message would (/could) blow up.
        log_message now produces no output if f is not enabled.
        TODO Test/example in test_log_calls_v30_minor_features_fixes.py
        TODO document (the bright side of this)

      - TODO DOCUMENT that we REQUIRE Python 3.3+ (__qualname__ now,
             and already we used inspect.signature so in fact we already required 3.3+)
        We check Py version in setup.py AND FAIL if version < 3.3

      - TODO Change docs to reflect that we always use perf_counter and process_time,
             cuz we assume Py3.3+ so they're "available"

      - changes to repr handling in "arguments: ..."
        objects that are still in construction (active __init__) use object.__repr__
        otherwise straightup repr.
        See "class Point" example for illustration.

        when displaying object arguments, log_calls
        uses the stock __repr__ method of `object` for objects still in
        construction, i.e. whose __init__ methods are still running/
        /still active/haven't yet returned/still on call stack.
        This is true for all objects, instances of classes whether they're deco'd OR NOT