@@ -5,7 +5,6 @@ from log_calls import log_calls
 
 from log_calls.tests.settings_with_NO_DECO import g_DECORATE, g_settings_dict
 
-
 def test_no_deco__via_dict():
     """
     >>> @log_calls(settings=g_settings_dict)
